--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <h3 class="mbr-section-title display-2"><em>Biography</em><br></h3>
                   
 
-                  <div><a class="btn btn-black" href="index.html#content7-u">READ MORE</a></div>
+                  <div><a class="btn btn-black" href="index.html#content7-2t">READ MORE</a></div>
               </div>
 
 
