--- a/photoshop gallery.html
+++ b/photoshop gallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery4-3b" data-filter="true" style="padding-top: 4.5rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery4-3b" data-filter="true" style="padding-top: 4.5rem; padding-bottom: 3rem;">
     <!-- Filter -->
     <div class="mbr-gallery-filter container gallery-filter-active">
         <ul>
