--- a/page8.html
+++ b/page8.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
@@ -44,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false">INTRODUCTION</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe audition">Adobe Audition</a><a class="dropdown-item" href="adobe premiere">Adobe Premire</a><a class="dropdown-item" href="adobe illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123D">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-bookmark mbr-iconfont mbr-iconfont-btn"></span>INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="#">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe audition">Adobe Audition</a><a class="dropdown-item" href="adobe premiere">Adobe Premire</a><a class="dropdown-item" href="adobe illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123D">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -57,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="form1-30" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-after-navbar" id="form1-30" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -82,7 +83,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="wkZrNw18VF8B54k5ERojpiT6iue0QP4Ph823vPnPBC63IfcKySzvXPpsIjfk3H4Wa3RB/e9BDtD4rBBaIQPcjgIJqYuvI/9x+iX0bw6IPHx1wEOlx8Excax6IIgUWFwX" data-form-email="true">
+                        <input type="hidden" value="6QDpxXzbGl0f8MpnOQkfjkhIqiHmJ+fWhGdqctOjFYs1dSa3KMjTMEXSID4VFpR9IjlTmKwDTTF7HKPFHepiAXaTd9sVb0qp1M+f8Zphjel3dlCi/flEt+QDxmhvPDVS" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
