--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Maker</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -71,7 +71,29 @@
 
 </section>
 
-<section class="mbr-section" id="msg-box6-g" data-bg-video="https://www.youtube.com/embed/DXTf1mpJotA?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow" id="header1-3k" data-bg-video="https://www.youtube.com/embed/DXTf1mpJotA?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+
+    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
+
+    <div class="mbr-table-cell">
+
+        <div class="container">
+            <div class="row">
+                <div class="mbr-section col-md-10 col-md-offset-1 text-xs-center">
+
+                    <h1 class="mbr-section-title display-1">Susana Lugones</h1>
+                    <p class="mbr-section-lead lead">Welcome</p>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#msg-box6-g"><i class="mbr-arrow-icon"></i></a></div>
+
+</section>
+
+<section class="mbr-section mbr-parallax-background" id="msg-box6-g" style="background-image: url(assets/images/bbbbbw4-2000x1246.jpg); padding-top: 120px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -231,6 +253,7 @@ Phone: (786)-397-1094<br><br></p>
   <script src="assets/touchSwipe/jquery.touchSwipe.min.js"></script>
   <script src="assets/viewportChecker/jquery.viewportchecker.js"></script>
   <script src="assets/jquery-mb-ytplayer/jquery.mb.YTPlayer.min.js"></script>
+  <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
