create github pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Page Builder</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -153,9 +153,9 @@
                 <div class="card cart-block">
                     <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-pages mbr-iconfont mbr-iconfont-features4" style="color: rgb(52, 11, 118);"></a></div>
                     <div class="card-block">
-                        <h4 class="card-title">Architect<br></h4>
+                        <h4 class="card-title">Architect Disigner<br></h4>
                         
-                        <p class="card-text">One of my goals is to be an architect because<br></p>
+                        <p class="card-text">One of my goals is to be an architect because ever scince I was little I have always loved to construct things and design them.<br></p>
                         
                     </div>
                 </div>
