--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-bookmark mbr-iconfont mbr-iconfont-btn"></span>INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="true">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="true">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe audition">Adobe Audition</a><a class="dropdown-item" href="adobe premiere">Adobe Premire</a><a class="dropdown-item" href="adobe illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123D">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link" href="index.html" aria-expanded="false"><span class="mbri-bookmark mbr-iconfont mbr-iconfont-btn"></span>INTRODUCTION</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="true">APPLICATIONS</a><div class="dropdown-menu"><a class="dropdown-item" href="photoshop gallery" aria-expanded="false">Adobe Photoshop</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="#" data-toggle="dropdown-submenu" aria-expanded="false">Office Suite</a><div class="dropdown-menu dropdown-submenu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="word" data-toggle="dropdown-submenu" aria-expanded="false">Word</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="https://susanalugones.github.io/documents/discussittopic6.pdf">DisscusIT</a></div></div><a class="dropdown-item" href="powerpoint">PowerPoint</a></div></div><a class="dropdown-item" href="adobe audition">Adobe Audition</a><a class="dropdown-item" href="adobe premiere">Adobe Premire</a><a class="dropdown-item" href="adobe illustrator">Adobe Illustrator</a><a class="dropdown-item" href="123D">123D</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">CREDENTIALS</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Adobe PS</a><a class="dropdown-item" href="#">Adobe Audition</a><a class="dropdown-item" href="#">Adobe Premiere</a><a class="dropdown-item" href="#">Adobe Illustrator</a><a class="dropdown-item" href="#">IC3<br></a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="https://mobirise.com/" data-toggle="dropdown-submenu" aria-expanded="false">REFERENCES</a><div class="dropdown-menu"><a class="dropdown-item" href="#">Mr.Pate</a><a class="dropdown-item" href="#"></a><a class="dropdown-item" href="#">Haayen Carolina<br></a><a class="dropdown-item" href="#">Javier Martinez</a><a class="dropdown-item" href="#">Javier Lopez</a></div></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="page8.html">Contact</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section" id="msg-box6-g" data-bg-video="https://www.youtube.com/embed/DXTf1mpJotA?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section" id="msg-box6-g" data-bg-video="https://www.youtube.com/embed/DXTf1mpJotA?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 160px; padding-bottom: 120px;">
 
     <div class="mbr-overlay" style="opacity: 0.7; background-color: rgb(0, 0, 0);">
     </div>
@@ -151,7 +151,7 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 40px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-pages mbr-iconfont mbr-iconfont-features4" style="color: rgb(52, 11, 118);"></a></div>
+                    <div class="card-img iconbox"><a href="https://mobirise.com" class="mbri-setting mbr-iconfont mbr-iconfont-features4" style="color: rgb(52, 11, 118);"></a></div>
                     <div class="card-block">
                         <h4 class="card-title">Architect Disigner<br></h4>
                         
