--- a/word.html
+++ b/word.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-2f" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 90px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-md-padding mbr-footer footer1 mbr-after-navbar" id="contacts1-2f" style="background-color: rgb(0, 0, 0); padding-top: 60px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
