create github pages

--- a/continuation.html
+++ b/continuation.html
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="c9ldi//8x0QlSJqNKYxx3ei2DnHwWokXgwVfZec1dpW84dimB34DBV0uSCJmJL9P9h6Swm11qB1ohc8YCMhQQteIhcS53c6cjv44cXrqLUS9aR1/lQnjO5lps+gF39WN" data-form-email="true">
+                    <input type="hidden" value="HPbCFg34XK7ALLTMTIHjhDpgtLUl8zTm/MzqMWUyHJQqBNAT9LbYkaW31KSWep9u7G+rDkhMVMlPLrQxK92xou70BttDx476ASKFp1cu/LEEBLaGu8c0yOQQbwAuJVbs" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
@@ -110,7 +110,7 @@ Phone: (786)-397-1094<br><br></p>
                         <label class="form-control-label" for="contacts4-4m-message">Message</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-4m-message"></textarea>
                     </div>
-                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact&nbsp;</button></div>
+                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact me</button></div>
                 </form>
             </div>
         </div>
@@ -120,7 +120,7 @@ Phone: (786)-397-1094<br><br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-3g" style="background-color: rgb(0, 0, 0); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2017 Susana Lugones</p>
     </div>
 </footer>
 
