--- a/intro.html
+++ b/intro.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Creator</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -71,7 +71,7 @@
 
 </section>
 
-<section class="mbr-section mbr-parallax-background" id="msg-box6-g" style="background-image: url(assets/images/mbr-5-2000x1333.jpg); padding-top: 120px; padding-bottom: 80px;">
+<section class="mbr-section mbr-parallax-background" id="msg-box6-g" style="background-image: url(assets/images/mbr-12-2000x1333.jpg); padding-top: 120px; padding-bottom: 80px;">
 
     <div class="mbr-overlay" style="opacity: 0.6; background-color: rgb(11, 1, 33);">
     </div>
@@ -199,7 +199,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Hf2/wAqjq5d4nJAWVHA3gFh7Wsh8/CPXjY8yGpUF2P8LYIsku7AzIFuktICnK2Ey9zecXRj5Sop2G+IrdQFKy7HpSDP40KUIf8Fr7Vk9pdTP3Px8p23O9UUb19dm2S44" data-form-email="true">
+                    <input type="hidden" value="Enn5LUpiBq6hjYQHduFBy06xplW2yxG/otJFn0v73aoBXiIO8lIoViCB7qr5QcQi2BqqeYyqM3djI6kgbfqmBrkYfmwuywm4vRM2Pu0S8stRp4pmuoh6ACc5C7C6AyT0" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
@@ -210,7 +210,7 @@ Phone: (786)-397-1094<br><br></p>
                         <label class="form-control-label" for="contacts4-4m-message">Message</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-4m-message"></textarea>
                     </div>
-                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact&nbsp;</button></div>
+                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact me</button></div>
                 </form>
             </div>
         </div>
@@ -220,7 +220,7 @@ Phone: (786)-397-1094<br><br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-17" style="background-color: rgb(0, 0, 0); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2017 Susana Lugones</p>
     </div>
 </footer>
 
