--- a/photoshop.html
+++ b/photoshop.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="NqBlAKsW2iKThER3gt4zpQ3+rvyZG52zpQL9W51vfga86yAlRxFIdOO0H2BU7rsCIe3CQJbyLn80cxfLZaeXCvTd5IK0BlsuHtjOetAurqzlddvyjjnaU6fuf34tRh+D" data-form-email="true">
+                    <input type="hidden" value="kexMOrfOAfli1ler2RoymYdXhfZzHVjeAu55ndW8Izw8dJEKDzX5ettozottsVQIpMKHZazFueWsFfDKhupS2L0ZKs7awRHG5XhY/Z+WQiwIHz4nUmWv0EJmABvWanav" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
@@ -110,7 +110,7 @@ Phone: (786)-397-1094<br><br></p>
                         <label class="form-control-label" for="contacts4-4m-message">Message</label>
                         <textarea class="form-control input-sm input-inverse" name="message" data-form-field="Message" rows="4" id="contacts4-4m-message"></textarea>
                     </div>
-                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact&nbsp;</button></div>
+                    <div class="mbr-buttons mbr-buttons--right btn-inverse"><button type="submit" class="btn btn-sm btn-info">Contact me</button></div>
                 </form>
             </div>
         </div>
@@ -120,7 +120,7 @@ Phone: (786)-397-1094<br><br></p>
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-1a" style="background-color: rgb(0, 0, 0); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container">
-        <p class="text-xs-center">Copyright (c) 2016 Mobirise.</p>
+        <p class="text-xs-center">Copyright (c) 2017 Susana Lugones</p>
     </div>
 </footer>
 
