--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-section" id="content8-53" data-bg-video="https://www.youtube.com/embed/gnikHiysgPw?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section" id="content8-53" data-bg-video="https://www.youtube.com/embed/gnikHiysgPw?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 160px; padding-bottom: 160px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -238,7 +238,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a class="text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="index.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -246,7 +246,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="E37FGDwJzWq9K+ENPGiLVI4/J15dIqHy7EKTsBDzoKVI4eKxwTgh70s2DmPfQO2o3T8LsOpzf6lMX2yZBQT/ZSfnPo9A6R4mehiLQ7czurDGD6VVkuQHc0t2a8nyJdfU" data-form-email="true">
+                    <input type="hidden" value="wCUooHSqjcm/SEe2Ka/JaPxkpZM9nr10YzbPFLPuxSr8uuszOahn3uDa3Xa8Kcjg6s3Agp1GYanNzbyyDATkflhvcnjhDO3evmxHjwKdBt7Mw+e9WzyXnLdIH5dodKfq" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
