--- a/continuation.html
+++ b/continuation.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -91,7 +91,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a class="text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="vEQyZB1bjkJIeOK5hne/F+G2WwJgEfZ1Oyv9rBmgQOZLwzoKvfKOsFFFBgFifhNVW2pcryad/SZABrDsN4qG2ouY8p7TCPMaJ/wQKmzkbiCdUac7UKnsXom41Zl+8A3x" data-form-email="true">
+                    <input type="hidden" value="B4gWmnwfP5FCIPftKy7YdlTX2Vvp7vmf/MU7+ZyW7w5/Zpmy/CMClG0GJUgMnu4nU5NQIdHXpaCZLSMUT0X30iDkZYfxi0KpWT0zCTTRb3D5gPf8OiuS0E6TZ24re3t2" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
