--- a/photoshop.html
+++ b/photoshop.html
@@ -91,7 +91,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a class="text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="uAsfyuLrzDl4Qa/ibvUzKudMI1wPQ6CZ9KGBEtTxJqjLw8MDUdIn0lj6ScBD8ALXV63jNajNAPADxCdVvsuj16fKwgnXlOYbyUBYgYUJboexoGQIuUFTymqvd1VUs4DP" data-form-email="true">
+                    <input type="hidden" value="5IeExSwjgnjHJK+AOJWDCVWHRmiJXDGa4YNK3cAM0f1DRBOuyO4QoWuaFEyfRhOWaWgOIMIyFhfaQf7cwT6o8+imaDdOG65VtKYtyETrpgrSM6tN44vrv81Sp4hE/g4s" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
