--- a/adobeagallery.html
+++ b/adobeagallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-42" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-42" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -213,7 +213,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a class="text-white" href="https://mobirise.com/">Website builder</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-win.zip">Download for Windows</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -221,7 +221,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="CF1F9/tJ1g+mOkhcE+Pv4WRlI0BNeaRRmL/l9ynHIveDpCxsyTEgUrmKytd3YyAtRCCZ5gAnolySlJLGY2v/7RNAe55B9j6/fiOeU5Sxd8CPD2Fy0mgEQw3MjBlslYPv" data-form-email="true">
+                    <input type="hidden" value="B+niZfpXCZ3T/V9W+Bzs/TRiDrPLE+PMeHaVZWhi9I2zMLPVg0ZU01WeQ+IyXv9t7pwbYnRVPFnNE0hbjKk3TBb6n5fCKjM2Fp2FHHTAltjX6OyuAjN2i8My4lBqrVb1" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
