--- a/intro.html
+++ b/intro.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-section mbr-section__container mbr-after-navbar" id="buttons1-c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 40px;">
 
     <div class="container">
         <div class="row">
@@ -191,7 +191,7 @@
 Email:slugones@miamiartsstudio.com<br>
 Phone: (786)-397-1094<br><br></p>
                     </div>
-                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="index.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
+                    <div class="col-sm-6"><p class="mbr-contacts__text"><strong>Links</strong></p><ul class="mbr-contacts__list"><li><a href="intro.html">Susana Lugones</a></li><li><a href="photoshopgallery.html">Photoshop Gallery</a></li><li><a class="text-white" href="https://mobirise.com/mobirise-free-mac.zip">Download for Mac</a></li></ul></div>
                 </div>
             </div>
             <div class="col-sm-4" data-form-type="formoid">
@@ -199,7 +199,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="f0P+9YvAmQuj5V96jB2FY/D4qssLKjUVUDC4G8ioggCLFrrJ4Z7POX61zU6vUFBMzDbs460m8/cIHlh3TFqCP/drZf+uKFKZKml6/NxqTt/IMYI72SbsRCvaHbkSqGkQ" data-form-email="true">
+                    <input type="hidden" value="ZGd9k5gno2t+Nf0QvMIl+3SJsLqInf4DWbaC8xoPCW10bRJDZGybOU5Ear+ZbHPTnbtcDHDjqXkNInecmc3SD0+tciWjE8fWoBYY7xAu/R7u/DZOV6vtf9x+u+IOvn3u" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
