--- a/photoshop.html
+++ b/photoshop.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4v" style="background-image: url(assets/images/mbr-7-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="5IeExSwjgnjHJK+AOJWDCVWHRmiJXDGa4YNK3cAM0f1DRBOuyO4QoWuaFEyfRhOWaWgOIMIyFhfaQf7cwT6o8+imaDdOG65VtKYtyETrpgrSM6tN44vrv81Sp4hE/g4s" data-form-email="true">
+                    <input type="hidden" value="2xwAnwXfBo/wxjmrgY15qWezAuyx9/eBV2lmnrz33fAe0grPoxb5OZhcVdvz6MY0AK1XXKcmXDFJyVAgbs6pzyw4v8BTFjyiXeIPRQCIaFJm4X+2S6cL1WiJWSUIwbNF" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
