--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -197,7 +197,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="6FwaxjX8EfF4N5KDjdm94szj+xryiFfhFAsXEWf9hPfPZcZRuye2mhfUas+/XB9xzKl0MBaM1Cv8ZLCxZnSu49OgDH2KTCwoXtrvDJnv3dwwBJq0bQr6T/wjCTtF2dZm" data-form-email="true">
+                    <input type="hidden" value="Ej1WV1DuKvtq6vhlhssx6rUG6v0m5wDSeAXTdA+p1rH947JWTzWPwwsDLiOd4+iodmnyuLhQ/OUxgEQhIoLOPNeE7zT1oXMppUazQxajvJ+iMM65SHNjoJr/89af+KDg" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
