--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -72,7 +72,7 @@
 
                     <h1 class="mbr-section-title display-1">SUSANA LUGONES</h1>
                     <p class="mbr-section-lead lead">"Successful people maintain a positive focus in life no matter what is going on around them. They stay focused on their past successes rather than their past failures, and on the next action steps they need to take to get them closer to the fulfillment of their goals rather than all the other distractions that life presents to them."- Jack Canfield<br><br></p>
-                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white btn-white-outline" href="intro.html">CONTINUE</a></div>
+                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white-outline btn-white" href="intro.html">CONTINUE</a></div>
                 </div>
             </div>
         </div>
@@ -246,7 +246,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="bcnrc9MW2453kupLAGagx1ohaWzRI2dTuMzB/qe6eY5YWqXbz7eoQm9l5sbEI6+FJkuexwqCvDeWYHgCXibueupOeN9Pfs6Dio3Y7IRtGQHojTqNrUaJVKXTOX0QhnS8" data-form-email="true">
+                    <input type="hidden" value="gTGgKjiwu97nnELrPMkzfTVBCfRO/aDfvqMJQXb/PpS8tO6L694n7MOhqm47f24h0g9mvG8RRodSG9dlHPFx96mkPrIH0ZKHGo7ebRAVgIJurne8qeD5gUxF7mbI9aod" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
