--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Maker</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -382,7 +382,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="L8TWoEeQ4/3MzFAD0Ri9WD2KKDPNKk29GlSfivBHoLKrIM/8iKNk8nz9X8EDrGkJb5XkawyPI34xoFexVeP9cUar0FKmam5OTo+L3dsnT6+dUS3KEzMGe/8F5kWqTFin" data-form-email="true">
+                    <input type="hidden" value="6/4KuYOavMoyLHJ1HueY5hrXGRTFewwtCVkF4tswv5zPp5YfT2tXYOF2lqoSKOUtPt6iRmaNSKJVaU5MTi1kzGptrVXkMI7xfbO9/O0FlNyHpH3mH/aLI4fVAcx5mSWP" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
